Schedule a frame from IntersectionObserver::observe.

If the target is intersecting the root when observe() is called, a
notification should be queued up immediately, but if no frame is
scheduled, then the intersection algorithm will not run.

BUG=612323
R=ojan@chromium.org,eae@chromium.org

Review-Url: https://codereview.chromium.org/1988633002
Cr-Commit-Position: refs/heads/master@{#395460}

Former-commit-id: 9d6cc87951566e8fc9be1a04fefb2054f870ab1e