third_party/WebKit/Source/core/dom/IntersectionObserver.h
@@ -21,7 +21,7 @@ class LayoutObject;
 class IntersectionObserverCallback;
 class IntersectionObserverInit;
 
-class IntersectionObserver final : public GarbageCollectedFinalized<IntersectionObserver>, public ScriptWrappable {
+class CORE_EXPORT IntersectionObserver final : public GarbageCollectedFinalized<IntersectionObserver>, public ScriptWrappable {
     DEFINE_WRAPPERTYPEINFO();
 
 public:
